# spellingbeeplus

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  codebook.toml  publish  version
Shared (App)/: Constants.swift  ViewController.swift
Shared (Extension)/: SafariWebExtensionHandler.swift
SpellingBeePlus.xcodeproj/: project.pbxproj
cli/: .gitignore  index.js  jsconfig.json  package.json  pnpm-lock.yaml  types.ts
extension/: AGENTS.md  CHANGELOG.md  Config.xcconfig  codebook.toml  dev  env.xcconfig.example  jsconfig.json  package.json  pnpm-lock.yaml  publish  version
iOS (App)/: AppDelegate.swift  (+1 more)
server/: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  biome.json  codebook.toml  deploy  jsconfig.json  localhost-key.pem  localhost.pem  package.json  pnpm-lock.yaml  proxy  tailwind.config.js  tsconfig.json
server/bindings/: Connect.ts  ErrMsg.ts  ErrMsgKind.ts  InternalMessage.ts  Joined.ts  MessageContent.ts  MessageFrom.ts  MessageTo.ts  Sync.ts
server/public/: app.css  app.js  global.d.ts  index.html  sb.js  sb.test.js  sbTypes.ts  sbp.css  sbp.js  sbpTypes.d.ts  sbpTypes.ts  src.css  storage.js  sync.js  tsconfig.json  util.js
server/src/: context.ts  db.test.ts  db.ts  error.rs  extractors.rs  games.ts  handlers.rs  handlers.ts  index.ts  main.rs  message.rs  message.ts  middlewares.ts  migrate.ts  routes.ts  server.ts  state.rs  types.rs  types.ts  util.ts
server/src/migrations/: 202503091617_init.js  202512210000_players_id_is_nyt_id.js  202512290000_games_players_key_unique.js  202606140000_game_players_last_synced_at.js
(+48 files in other folders)
